refactor: alteração no relacionamento entre musica e album